<resources>
    <string name="app_name">KopaShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signIn">Вхід</string>
    <string name="next">Далі</string>
    <string name="code">code</string>
    <string name="category">category</string>
    <string name="someText">someText</string>
    <string name="twitterUsername">twitter</string>
    <string name="action_settings">Settings</string>
    <string name="sizeBoots">Розмір стопи: </string>
    <string name="material">Матеріал:</string>
    <string name="materialTitle">leather</string>
    <string name="standarts">EU</string>
    <string name="title">Nike</string>
    <string name="length">Довжина / см</string>
    <string name="width">Ширина / см</string>
    <!-- Facebook -->
    <string name="facebook_app_id">5761018167257748</string>
    <string name="fb_login_protocol_scheme">fb5761018167257748</string>
    <string name="number_edit_text">number</string>
    <string name="code_edit_text">code</string>

    <string name="signOut">Вийти</string>
    <string name="setEdit">Done</string>
    <string name="save">Зберегти</string>
    <string name="about"></string>
    <string name="addPhoto">Додати фото</string>
    <string name="size">Розмір</string>
    <string name="model">Модель</string>
    <string name="description_post">Опис</string>
    <string name="price_post">Ціна</string>
    <string name="material_post">Матеріал</string>


    <string name="signInWithPhoneNumber">Phone number</string>
    <string name="price">100$</string>

    <string name="sizeOfFoot">Розміри стопи:</string>

    <string name="description">Опис про товар і як довго носив кросівки чи специфічні деталі взуття. натирало чи ні.
        чи дуло задувало. на широку ногу чи сайз не відповідає зязвленому. хвалиш взуття щоб точно купили.
        бо подарували дві пари, а ти за літо ще ні одної не зносив.</string>
    <string name="seller">Продавець</string>
    <string name="city">Ukraine, Vinnytsia</string>

    <string-array name="model_array">
        <item>Nike airmax</item>
        <item>Nike 2200</item>
        <item>Nike 2190</item>
    </string-array>
    
    <string-array name="size_array">
        <item>22.5</item>
        <item>23</item>
        <item>23.5</item>
    </string-array>

    <string-array name="length">
        <item>35</item>
        <item>36</item>
        <item>37</item>
    </string-array>

    <string-array name="width_array">
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
    </string-array>

</resources>